# tua-rs

./: BETTER_RUST.md  CLAUDE_TASK.md  COMPARISON.md  Cargo.toml  GUIDE.md  PROJECT.md  README.md  ROADMAP.md  TASK_FIX_ALL.md  TASK_TEST_dashboard.md  TASK_TEST_mock.md  TASK_TEST_openai.md  TASK_TEST_parallel.md  TASK_TEST_wasm.md  TASK_TEST_workspace.md  TASK_cli_agent_loop.md  TASK_context_selector.md  TASK_crates_integration.md  TASK_diff.md  TASK_orchestrator.md  TASK_session_persistence.md  TASK_session_v2.md  TASK_sysprompt.md  TASK_tui_improvements.md  TASK_unwrap.md  WHY_TUA.md  build.rs  check_stderr.txt  libskills.rlib  libtua_rs.rlib
.github/workflows/: ci.yml
benches/: agent_bench.rs
src/: ast.rs  cache.rs  checkpoint.rs  completion.rs  config.rs  context.rs  context_guard.rs  dashboard.rs  hierarchy.rs  highlight.rs  learning.rs  lib.rs  lsp.rs  main.rs  memory.rs  orchestrator.rs  parallel.rs  profiles.rs  review.rs  rich_output.rs  sandbox.rs  session.rs  setup.rs  skills.rs  structured.rs  testgen.rs  theme.rs  tools.rs  tui.rs  wasm.rs  workspace.rs
src/agent/: mod.rs
src/prompts/: mod.rs  rust_system_prompt.rs
src/providers/: anthropic.rs  mock.rs  mod.rs  ollama.rs  openai_compatible.rs
tests/: integration_test.rs
