[package]
name = "tua-rs"
version = "1.0.0"
edition = "2021"
description = "🦀 Tua Agent — Rust-specialized AI coding agent (native Rust port)"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1.12.1"
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
ratatui = "0.29"
crossterm = "0.28"
uuid = { version = "1", features = ["v4", "serde"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "agent_bench"
harness = false
